--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ subtitle: Full Stack Web Developer
 description: >- # this means to ignore newlines until "baseurl:"
   Tony Lee uses devlopr-jekyll - a Jekyll Theme Built For Developers
 
-url: "http://localhost:4000" # the base hostname & protocol for your site, e.g. https://example.github.io
+url: "aiegoo.github.io/tonyjekyll" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
 
 urls:
@@ -24,9 +24,9 @@ urls:
 author_logo: profile.png
 author: Tony Lee
 author_bio: Hi, My Name is Tony Lee. I love to Code and Design. devlopr-jekyll is a theme built for developers.  
-author_email: "tonylee@gmail.com"
+author_email: "eozz21@gmail.com"
 author_location: Korea
-author_website_url: "http://tonylee.com"
+author_website_url: "http://tonyleekorea.com"
 
 author_work_experiences: 
             - company_name: Google
